2008-09-29  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: gcalctool branched for GNOME 2.24.

2008-09-27  Goran Rakić  <grakic@devbase.net>

	* update-stats.py: Use hidden teams for doc stats too (bug #553695).

2008-09-27  Claude Paroz  <claude@2xlibre.net>

	* people.xml.in:
	* translation-teams.xml.in: Added Kazakh translation team.

2008-09-26  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: gnome-desktop, gnome-settings-daemon,
	gnome-control-center, hamster-applet, gtk-engines branched for 2.24.

2008-09-25  Johannes Schmid  <jhs@gnome.org>

	* releases.xml.in
	* gnome-modules.xml.in: Branched anjuta for gnome-2-24

2008-09-25  Claude Paroz  <claude@2xlibre.net>

	* releases.xml.in: GNOME 2.24 is now stable. Thanks pterjan for
	noticing ;-)

2008-09-25  Claude Paroz  <claude@2xlibre.net>

	* people.xml.in: Added Bob.
	* translation-teams.xml.in: Robert-André Mauchin is the French team leader
	for GNOME 2.26.

2008-09-25  Gil Forcada  <gforcada@gnome.org>

	* gnome-modules.xml.in:
	* releases.xml.in:  gconf-editor branched for GNOME 2.24.

2008-09-23  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: gnome-applets branched for GNOME 2.24.
	Added stable branch to billreminder.

2008-09-23  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: gok branched fro GNOME 2.24, track gtranslator HEAD
	again.

2008-09-22  Gil Forcada  <gforcada@gnome.org>

	* gnome-modules.xml.in:
	* releases.xml.in:  Cheese, ekiga and mousetweaks branched for GNOME 2.24.

2008-09-22  Gil Forcada  <gforcada@gnome.org>

	* gnome-modules.xml.in:
	* releases.xml.in: gnome-{themes,games,terminal}, gucharmap, tomboy,
	evolution, evolution-data-server and evolution-exchange branched for GNOME 2.24.

2008-09-22  Claude Paroz  <claude@2xlibre.net>

	* releases.xml.in: release-notes 2.24 in gnome-infrastructure.

2008-09-20  Gil Forcada  <gforcada@gnome.org>
