@@ -706,7 +706,7 @@
       <module id="cheese" branch="gnome-2-24"/>
       <module id="dasher"/>
       <module id="deskbar-applet"/>
-      <module id="eel"/>
+      <module id="eel" branch="gnome-2-24"/>
       <module id="ekiga" branch="gnome-2-24"/>
       <module id="empathy" branch="gnome-2-24"/>
       <module id="eog"/>
@@ -762,7 +762,7 @@
       <module id="libwnck"/>
       <module id="metacity" branch="gnome-2-24"/>
       <module id="mousetweaks" branch="gnome-2-24"/>
-      <module id="nautilus"/>
+      <module id="nautilus" branch="gnome-2-24"/>
       <module id="nautilus-cd-burner"/>
       <module id="orca"/>
       <module id="seahorse"/>
