@@ -1,3 +1,8 @@
+2008-10-01  Gil Forcada  <gforcada@gnome.org>
+
+	* gnome-modules.xml.in:
+	* releases.xml.in: nautilus and eel branched for GNOME 2.24.
+
 2008-09-29  Claude Paroz  <claude@2xlibre.net>
 
 	* gnome-modules.xml.in:
